<resources>
    <string name="app_name">CE-1257218</string>
    <string name="action_settings">Settings</string>
    <string name="publicUtilities">Public utilities</string>
    <string name="inProgress">In progress</string>
    <string name="created">Created</string>
    <string name="feb25">25 february 2016</string>
    <string name="registreted">Registreted</string>
    <string name="feb26">26 february 2016</string>
    <string name="assigned">Assigned</string>
    <string name="feb28">28 february 2016</string>
    <string name="responsible">Responsible</string>
    <string name="dnepr">Dnipropetrovsk RVK</string>
    <string name="Text1">That word "squirrel", first specified in 1327, comes from the Anglo-Norman esquirel which is from the Old French escurel, the reflex of a Latin word sciurus. This Latin word was borrowed from the Ancient Greek word σκίουρος, skiouros, which means shadow-tailed, referring to the bushy appendage possessed by many of its members.
The native Old English word for the squirrel, ācweorna, survived only into Middle English (as aquerne) before being replaced. The Old English word is of Common Germanic origin, cognates of which are still used in other Germanic languages, including the German Eichhörnchen (diminutive of Eichhorn, which is not as frequently used), the Norwegian ikorn/ekorn, the Dutch eekhoorn, the Swedish ekorre and the Danish egern.
</string>
</resources>
